--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "seginim",
+    "password": "seginimcity",
     "database": "Infokuliah_db",
     "host": "localhost",
     "dialect": "postgres"
